# diffusion_models_course

./: .gitignore  README.md  ddpm_from_scratch.ipynb  diffusers_high_level.ipynb  ncsn_from_scratch.ipynb  pyproject.toml
models/: ddpm.py  ncsn.py
weights/: ddpm_300epochs.pickle
